--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "^14.1.0",
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
+    "@angular/localize": "^14.1.0",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -23,9 +24,29 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.0",
     "@fortawesome/free-regular-svg-icons": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@progress/kendo-angular-buttons": "11.3.0",
+    "@progress/kendo-angular-common": "11.3.0",
+    "@progress/kendo-angular-dateinputs": "11.3.0",
+    "@progress/kendo-angular-grid": "^11.3.0",
+    "@progress/kendo-angular-icons": "11.3.0",
+    "@progress/kendo-angular-intl": "11.3.0",
+    "@progress/kendo-angular-l10n": "11.3.0",
+    "@progress/kendo-angular-label": "11.3.0",
+    "@progress/kendo-angular-popup": "11.3.0",
+    "@progress/kendo-licensing": "^1.0.2",
+    "@progress/kendo-svg-icons": "^1.0.0",
+    "@progress/kendo-theme-default": "^6.0.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "@progress/kendo-data-query": "^1.0.0",
+    "@progress/kendo-drawing": "^1.17.2",
+    "@progress/kendo-angular-dropdowns": "11.3.0",
+    "@progress/kendo-angular-excel-export": "11.3.0",
+    "@progress/kendo-angular-inputs": "11.3.0",
+    "@progress/kendo-angular-pdf-export": "11.3.0",
+    "@progress/kendo-angular-treeview": "11.3.0",
+    "@progress/kendo-angular-dialog": "11.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
